--- a/cata.html
+++ b/cata.html
@@ -90,7 +90,12 @@
                 <tr>
                     <td>12</td>
                     <td><a href="topaz.html" target="_blank">Topaz Gang Series</a></td>
+                </tr>
+                <tr>
+                    <td>12</td>
+                    <td><a href="topaz.html" target="_blank">Super Star FAN (DELUX)</a></td>
                 </tr>  
+
 
             </tbody>
         </table>
