--- a/cata.html
+++ b/cata.html
@@ -94,7 +94,11 @@
                 <tr>
                     <td>12</td>
                     <td><a href="topaz.html" target="_blank">Super Star FAN (DELUX)</a></td>
-                </tr>  
+                </tr> 
+                 <tr>
+                    <td>12</td>
+                    <td><a href="topaz.html" target="_blank">SurFace Gang Switch Box</a></td>
+                </tr> 
 
 
             </tbody>
