--- a/cata.html
+++ b/cata.html
@@ -93,11 +93,11 @@
                 </tr>
                 <tr>
                     <td>12</td>
-                    <td><a href="topaz.html" target="_blank">Super Star FAN (DELUX)</a></td>
+                    <td><a href="fan.html" target="_blank">Super Star FAN (DELUX)</a></td>
                 </tr> 
                  <tr>
                     <td>12</td>
-                    <td><a href="topaz.html" target="_blank">SurFace Gang Switch Box</a></td>
+                    <td><a href="surface.html" target="_blank">SurFace Gang Switch Box</a></td>
                 </tr> 
 
 
