--- a/fan.html
+++ b/fan.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <nav>
-            <h1><a href="#">Business Manager</a></h1>
+            <h1><a href="cata.html">Business Manager</a></h1>
             <ul>
                 <li><a href="cata.html" target="_blank">Catagory</a></li>
                 <li><a href="cata.html">Home</a></li>
@@ -19,7 +19,12 @@
             </ul>
         </nav>
     </header>
-    <div>
+    <div class="title">
+        <marquee behavior="#" direction="#">
+            এই অফার ফেব্রুয়ারী মাসের ০১ তারিখ থেকে ২৯ তারিখ পর্যন্ত চলবে
+        </marquee>
+    </div>
+    <div class="table">
         <table border="6">
             <thead>
                 <h1 class="head">SUPER STAR FAN (Delux)</h1>
