--- a/surface.html
+++ b/surface.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <nav>
-            <h1><a href="#">Business Manager</a></h1>
+            <h1><a href="cata.html" target="_blank">Business Manager</a></h1>
             <ul>
                 <li><a href="cata.html" target="_blank">Catagory</a></li>
                 <li><a href="cata.html">Home</a></li>
@@ -20,14 +20,14 @@
         </nav>
     </header>
     <div class="title">
-        <marquee behavior="" direction="">
-            এই অফার ০১ থেকে ২৮ ফেব্রুয়ারী পর্যন্ত চলবে
+        <marquee behavior="#" direction="#">
+            এই অফার ফেব্রুয়ারী মাসের ০১ তারিখ থেকে ২৯ তারিখ পর্যন্ত চলবে
         </marquee>
     </div>
-    <div>
+    <div class="table">
         <table border="6">
             <thead>
-                <h1 class="head">SurFace Gang Switch Box</h1>
+                <h1>SurFace Gang Switch Box</h1>
                 <tr>
                     <th>SL</th>
                     <th>Product Name</th>
