--- a/cirket.html
+++ b/cirket.html
@@ -18,6 +18,11 @@
             </ul>
         </nav>
     </header>
+    <div class="title">
+        <marquee behavior="#" direction="#">
+            এই অফার ফেব্রুয়ারী মাসের ০১ তারিখ থেকে ২৯ তারিখ পর্যন্ত চলবে
+        </marquee>
+    </div>
     <div>
         <table>
             <thead>
