--- a/dim.html
+++ b/dim.html
@@ -19,6 +19,11 @@
             </ul>
         </nav>
     </header>
+    <div class="title">
+        <marquee behavior="#" direction="#">
+            এই অফার ফেব্রুয়ারী মাসের ০১ তারিখ থেকে ২৯ তারিখ পর্যন্ত চলবে
+        </marquee>
+    </div>
     <div>
         <table border="6">
             <thead>
