--- a/cata.html
+++ b/cata.html
@@ -18,6 +18,10 @@
             </ul>
         </nav>
     </header>
+    <div class="title">
+        <marquee behavior="#" direction="#">
+            বিঃ দ্রঃ ***অফার পরিবর্তনশীল। তাই, Ragular অফার Flow করুন***        </marquee>
+    </div>
     <div>
         <table border="6">
             <thead>
