--- a/cata.html
+++ b/cata.html
@@ -20,7 +20,7 @@
     </header>
     <div class="title">
         <marquee behavior="#" direction="#">
-            বিঃ দ্রঃ ***অফার পরিবর্তনশীল। তাই, RAGULAR OFFER দেখুন***</marquee>
+            ***অফার পরিবর্তনশীল। তাই, RAGULAR OFFER দেখুন***</marquee>
     </div>
     <div>
         <table border="6">
