--- a/big.html
+++ b/big.html
@@ -21,7 +21,7 @@
     </header>
     <div class="title">
         <marquee behavior="#" direction="#">
-            এই অফার মার্চ মাসের ০১ তারিখ থেকে ৩১ তারিখ পর্যন্ত চলবে
+            এই অফার মে মাসের ০১ তারিখ থেকে ৩১ তারিখ পর্যন্ত চলবে
         </marquee>
     </div>
     <div>
@@ -44,23 +44,23 @@
                 <tr>
                     <td>01</td>
                     <td>20W Big LED (Pin & Pass)</td>
-                    <td>415</td>
-                    <td>340</td>
-                    <td>460</td>
+                    <td>415.00</td>
+                    <td>340.30</td>
+                    <td>460.00</td>
                 </tr>
                 <tr>
                     <td>02</td>
                     <td>30W Big LED (Pin & Pass)</td>
-                    <td>504</td>
-                    <td>413</td>
-                    <td>560</td>
+                    <td>504.00</td>
+                    <td>413.28</td>
+                    <td>560.00</td>
                 </tr>
                 <tr>
                     <td>03</td>
                     <td>40W Big LED (Pin & Pass)</td>
-                    <td>693</td>
-                    <td>568</td>
-                    <td>810</td>
+                    <td>693.00</td>
+                    <td>568.26</td>
+                    <td>81000</td>
                 </tr>
                
             </tbody>
