--- a/big.html
+++ b/big.html
@@ -29,7 +29,7 @@
             <thead>
                 <h1>Big LED
                 <a href="https://drive.google.com/file/d/1Yc8EZolQLKIX6jeZk0-jDvcMxLngz1Rr/view?usp=sharing" target="_blank">
-                        Catalog
+                        Catalog (১৮%)
                     </a>
                 </h1>
                 <tr>
