--- a/dim.html
+++ b/dim.html
@@ -21,7 +21,7 @@
     </header>
     <div class="title">
         <marquee behavior="#" direction="#">
-            এই অফার মার্চ মাসের ০১ তারিখ থেকে ৩১ তারিখ পর্যন্ত চলবে
+            এই অফার মে মাসের ০১ তারিখ থেকে ৩১ তারিখ পর্যন্ত চলবে
         </marquee>
     </div>
     <div>
@@ -29,7 +29,7 @@
             <thead>
                 <h1>Dim LED
                 <a href="https://drive.google.com/file/d/1Yc8EZolQLKIX6jeZk0-jDvcMxLngz1Rr/view?usp=sharing" target="_blank">
-                        Catalog
+                        Catalog (১৩%)
                     </a>
                 </h1>
                 <tr>
@@ -44,23 +44,23 @@
                 <tr>
                     <td>01</td>
                     <td>0.5W RED</td>
-                    <td>51</td>
-                    <td>44</td>
-                    <td>70</td>
+                    <td>51.00</td>
+                    <td>44.37</td>
+                    <td>70.00</td>
                 </tr>
                 <tr>
                     <td>02</td>
                     <td>0.5W YELLOW</td>
-                    <td>51</td>
-                    <td>44</td>
-                    <td>70</td>
+                    <td>51.00</td>
+                    <td>44.37</td>
+                    <td>70.00</td>
                 </tr>
                 <tr>
                     <td>03</td>
                     <td>0.5W BLUE</td>
-                    <td>51</td>
-                    <td>44</td>
-                    <td>70</td>
+                    <td>51.00</td>
+                    <td>44.37</td>
+                    <td>70.00</td>
                 </tr>
                
             </tbody>
