--- a/acc.html
+++ b/acc.html
@@ -20,7 +20,7 @@
     </header>
     <div class="title">
         <marquee behavior="#" direction="#">
-            এই অফার মার্চ মাসের ০১ তারিখ থেকে ৩১ তারিখ পর্যন্ত চলবে
+            এই অফার মে মাসের ০১ তারিখ থেকে ৩১ তারিখ পর্যন্ত চলবে
         </marquee>
     </div>
     <div>
@@ -28,7 +28,7 @@
             <thead>
                 <h1>Accessories
                 <a href="https://drive.google.com/file/d/1Yc8EZolQLKIX6jeZk0-jDvcMxLngz1Rr/view?usp=sharing" target="_blank">
-                        Catalog
+                        Catalog (১০%)
                     </a>
                 </h1>
                 <tr>
@@ -93,7 +93,7 @@
                     <td>08</td>
                     <td>Bed Switch</td>
                     <td>30</td>
-                    <td>27</td>
+                    <td>26</td>
                     <td>44</td>
                 </tr>
                 <tr>
