--- a/besic.html
+++ b/besic.html
@@ -21,7 +21,7 @@
     </header>
     <div class="title">
         <marquee behavior="#" direction="#">
-            এই অফার মার্চ মাসের ০১ তারিখ থেকে ৩১ তারিখ পর্যন্ত চলবে
+            এই অফার মে মাসের ০১ তারিখ থেকে ৩১ তারিখ পর্যন্ত চলবে
         </marquee>
     </div>
     <div>
@@ -29,7 +29,7 @@
             <thead>
                 <h1>Besic LED
                 <a href="https://drive.google.com/file/d/1Yc8EZolQLKIX6jeZk0-jDvcMxLngz1Rr/view?usp=sharing" target="_blank">
-                        Catalog
+                        Catalog (১০%)
                     </a>
                 </h1>
                 <tr>
