--- a/fan.html
+++ b/fan.html
@@ -21,7 +21,7 @@
     </header>
     <div class="title">
         <marquee behavior="#" direction="#">
-            এই অফার মার্চ মাসের ০১ তারিখ থেকে ৩১ তারিখ পর্যন্ত চলবে
+            এই অফার মে মাসের ০১ তারিখ থেকে ৩১ তারিখ পর্যন্ত চলবে
         </marquee>
     </div>
     <div class="table">
