--- a/silk.html
+++ b/silk.html
@@ -124,6 +124,13 @@
                     <td>237</td>
                     <td>405</td>
                 </tr>
+                <tr>
+                    <td>12</td>
+                    <td>8 Pin Combine Socket</td>
+                    <td>283.5</td>
+                    <td>258</td>
+                    <td>000</td>
+                </tr>
                
             </tbody>
         </table>
