--- a/big.html
+++ b/big.html
@@ -19,17 +19,12 @@
             </ul>
         </nav>
     </header>
-    <div class="title">
-        <marquee behavior="#" direction="#">
-            এই অফার মে মাসের ০১ তারিখ থেকে ৩১ তারিখ পর্যন্ত চলবে
-        </marquee>
-    </div>
     <div>
         <table border="6">
             <thead>
                 <h1>Big LED
                 <a href="https://drive.google.com/file/d/1Yc8EZolQLKIX6jeZk0-jDvcMxLngz1Rr/view?usp=sharing" target="_blank">
-                        Catalog (১৮%)
+                        Catalog
                     </a>
                 </h1>
                 <tr>
