--- a/bracket.html
+++ b/bracket.html
@@ -19,17 +19,12 @@
             </ul>
         </nav>
     </header>
-    <div class="title">
-        <marquee behavior="#" direction="#">
-            এই অফার মে মাসের ০১ তারিখ থেকে ৩১ তারিখ পর্যন্ত চলবে
-        </marquee>
-    </div>
     <div>
         <table border="6">
             <thead>
                 <h1>Bracket LED Tube
                 <a href="https://drive.google.com/file/d/1Yc8EZolQLKIX6jeZk0-jDvcMxLngz1Rr/view?usp=sharing" target="_blank">
-                        Catalog (২২%)
+                        Catalog
                     </a>
                 </h1>
                 <tr>
@@ -45,14 +40,14 @@
                     <td>01</td>
                     <td>10W Bracket Tube</td>
                     <td>309</td>
-                    <td>241</td>
+                    <td>241.02</td>
                     <td>375</td>
                 </tr>
                 <tr>
                     <td>02</td>
                     <td>40W Bracket Tube</td>
                     <td>625</td>
-                    <td>487</td>
+                    <td>487.5</td>
                     <td>775</td>
                 </tr>
                 <tr>
@@ -66,7 +61,7 @@
                     <td>04</td>
                     <td>T-5 Tube LED</td>
                     <td>410</td>
-                    <td>349</td>
+                    <td>348.50</td>
                     <td>460</td>
                 </tr>
                
