--- a/cata.html
+++ b/cata.html
@@ -49,7 +49,7 @@
                 </tr>
                 <tr>
                     <td>04</td>
-                    <td><a href="bracket.html" target="_blank">Bracket LED (২২%)</a></td>
+                    <td><a href="bracket.html" target="_blank">Bracket LED (২২%) (১৫%)</a></td>
                     
                 </tr>
                 <tr>
@@ -64,7 +64,7 @@
                 </tr>
                 <tr>
                     <td>07</td>
-                    <td><a href="emerg.html" target="_blank">Emergency Bulb (১১%)</a></td>
+                    <td><a href="emerg.html" target="_blank">Emergency Bulb (১৫%)</a></td>
                     
                 </tr>
                 <tr>
@@ -89,7 +89,7 @@
                 </tr>
                 <tr>
                     <td>12</td>
-                    <td><a href="pvc.html" target="_blank">PVC Tape (১০%)</a></td>
+                    <td><a href="pvc.html" target="_blank">PVC Tape (১২%)</a></td>
                 </tr>
                 <tr>
                     <td>12</td>
