--- a/acc.html
+++ b/acc.html
@@ -19,9 +19,6 @@
         </nav>
     </header>
     <div class="title">
-        <marquee behavior="#" direction="#">
-            এই অফার মে মাসের ০১ তারিখ থেকে ৩১ তারিখ পর্যন্ত চলবে
-        </marquee>
     </div>
     <div>
         <table border="6">
@@ -34,94 +31,94 @@
                 <tr>
                     <th>SL</th>
                     <th>Product Name</th>
-                    <th>TP</th>
-                    <th>ETP</th>
-                    <th>MRP</th>
+                    <th>TP (12P)</th>
+                    <th>ETP (12P)</th>
+                    <th>MRP (12P)</th>
                 </tr>
             </thead>
             <tbody>
                 <tr>
                     <td>01</td>
                     <td>Batten Holder</td>
-                    <td>39</td>
-                    <td>35</td>
-                    <td>60</td>
+                    <td>468.00</td>
+                    <td>421.20</td>
+                    <td>720.00</td>
                 </tr>
                 <tr>
                     <td>02</td>
                     <td>Pandent Holder (B-22)</td>
-                    <td>29</td>
-                    <td>26</td>
-                    <td>45</td>
+                    <td>360</td>
+                    <td>324</td>
+                    <td>540</td>
                 </tr>
                 <tr>
                     <td>03</td>
                     <td>Pandent Holder (B-27)</td>
-                    <td>33</td>
-                    <td>30</td>
-                    <td>50</td>
+                    <td>396.00</td>
+                    <td>356.60</td>
+                    <td>1200</td>
                 </tr>
                 <tr>
                     <td>04</td>
                     <td>Hexagon Holder (B-22)</td>
-                    <td>82</td>
-                    <td>74</td>
-                    <td>115</td>
+                    <td>864.00</td>
+                    <td>777.60</td>
+                    <td>1380</td>
                 </tr>
                 <tr>
                     <td>05</td>
                     <td>Hexagon Holder (B-27)</td>
-                    <td>92</td>
-                    <td>83</td>
-                    <td>130</td>
+                    <td>864.00</td>
+                    <td>777.60</td>
+                    <td>1380</td>
                 </tr>
                 <tr>
                     <td>06</td>
                     <td>Hexagon Celling Rose</td>
-                    <td>71.5</td>
-                    <td>64</td>
-                    <td>105</td>
+                    <td>864.00</td>
+                    <td>777.60</td>
+                    <td>1380</td>
                 </tr>
                 <tr>
                     <td>07</td>
                     <td>Celling Rose</td>
-                    <td>25.5</td>
-                    <td>23</td>
-                    <td>40</td>
+                    <td>312.00</td>
+                    <td>280.80</td>
+                    <td>480.00</td>
                 </tr>
                 <tr>
                     <td>08</td>
                     <td>Bed Switch</td>
-                    <td>30</td>
-                    <td>26</td>
-                    <td>44</td>
+                    <td>348.00</td>
+                    <td>313.20</td>
+                    <td>528.00</td>
                 </tr>
                 <tr>
                     <td>09</td>
                     <td>2 Pin Plug</td>
-                    <td>31</td>
-                    <td>28</td>
-                    <td>45</td>
+                    <td>372.00</td>
+                    <td>334.80</td>
+                    <td>540.00</td>
                 </tr>
                 <tr>
                     <td>10</td>
-                    <td>Combination Socket</td>
-                    <td>275.5</td>
-                    <td>248</td>
+                    <td>Combination Socket (10P)</td>
+                    <td>2760.00</td>
+                    <td>2511.60</td>
                     <td>000</td>
                 </tr>
                 <tr>
                     <td>11</td>
-                    <td>Extention Socket</td>
-                    <td>425</td>
-                    <td>383</td>
-                    <td>530</td>
+                    <td>Extention Socket (1P)</td>
+                    <td>437.00</td>
+                    <td>393.30</td>
+                    <td>530.00</td>
                 </tr>
                 <tr>
                     <td>12</td>
                     <td>Main Switch</td>
-                    <td>336</td>
-                    <td>336</td>
+                    <td>338</td>
+                    <td>338</td>
                     <td>475</td>
                 </tr>
             </tbody>
