--- a/gls.html
+++ b/gls.html
@@ -30,9 +30,9 @@
                 <tr>
                     <th>SL</th>
                     <th>Product Name</th>
-                    <th>TP</th>
-                    <th>ETP</th>
-                    <th>MRP</th>
+                    <th>TP (12P)</th>
+                    <th>ETP (12P)</th>
+                    <th>MRP (12P)</th>
                 </tr>
             </thead>
             <tbody>
