--- a/piano.html
+++ b/piano.html
@@ -19,9 +19,7 @@
         </nav>
     </header>
     <div class="title">
-        <marquee behavior="#" direction="#">
-            এই অফার মে মাসের ০১ তারিখ থেকে ৩১ তারিখ পর্যন্ত চলবে
-        </marquee>
+        
     </div>
     <div>
         <table border="6">
@@ -34,46 +32,46 @@
                 <tr>
                     <th>SL</th>
                     <th>Product Name</th>
-                    <th>TP</th>
-                    <th>ETP</th>
-                    <th>MRP</th>
+                    <th>TP (12P)</th>
+                    <th>ETP (12P)</th>
+                    <th>MRP (12P)</th>
                 </tr>
             </thead>
             <tbody>
                 <tr>
                     <td>01</td>
                     <td>Switch</td>
-                    <td>318</td>
-                    <td>258</td>
-                    <td>480</td>
+                    <td>324.00</td>
+                    <td>262.44</td>
+                    <td>480.00</td>
                 </tr>
                 <tr>
                     <td>02</td>
                     <td>Socket</td>
-                    <td>378</td>
-                    <td>306</td>
-                    <td>552</td>
+                    <td>384.00</td>
+                    <td>311.04</td>
+                    <td>552.00</td>
                 </tr>
                 <tr>
                     <td>03</td>
                     <td>Inticator</td>
-                    <td>354</td>
-                    <td>287</td>
-                    <td>504</td>
+                    <td>360.00</td>
+                    <td>291.60</td>
+                    <td>504.00</td>
                 </tr>
                 <tr>
                     <td>04</td>
                     <td>Fuse</td>
-                    <td>408</td>
-                    <td>330</td>
-                    <td>624</td>
+                    <td>408.00</td>
+                    <td>330.48</td>
+                    <td>624.00</td>
                 </tr>
                 <tr>
                     <td>05</td>
                     <td>Ragulator</td>
-                    <td>1692</td>
-                    <td>1371</td>
-                    <td>2424</td>
+                    <td>1692.00</td>
+                    <td>1370.52</td>
+                    <td>2424.00</td>
                 </tr>
                 
             </tbody>
