--- a/pvc.html
+++ b/pvc.html
@@ -19,9 +19,7 @@
         </nav>
     </header>
     <div class="title">
-        <marquee behavior="#" direction="#">
-            এই অফার মে মাসের ০১ তারিখ থেকে ৩১ তারিখ পর্যন্ত চলবে
-        </marquee>
+       
     </div>
     <div>
         <table border="6">
@@ -34,25 +32,25 @@
                 <tr>
                     <th>SL</th>
                     <th>Product Name</th>
-                    <th>TP</th>
-                    <th>ETP</th>
-                    <th>MRP</th>
+                    <th>TP (12P)</th>
+                    <th>ETP (12P)</th>
+                    <th>MRP (12P)</th>
                 </tr>
             </thead>
             <tbody>
                 <tr>
                     <td>01</td>
-                    <td>8 yds Tape</td>
-                    <td>216</td>
-                    <td>190</td>
-                    <td>300</td>
+                    <td>10Y Tape 15mm</td>
+                    <td>252.00</td>
+                    <td>221.76</td>
+                    <td>300.00</td>
                 </tr>
                 <tr>
                     <td>02</td>
-                    <td>10 yds Tape</td>
-                    <td>240</td>
-                    <td>211</td>
-                    <td>336</td>
+                    <td>10Y Tape 12mm</td>
+                    <td>216.00</td>
+                    <td>190.08</td>
+                    <td>336.00</td>
                 </tr>
                
             </tbody>
