--- a/fan.html
+++ b/fan.html
@@ -20,9 +20,7 @@
         </nav>
     </header>
     <div class="title">
-        <marquee behavior="#" direction="#">
-            এই অফার মে মাসের ০১ তারিখ থেকে ৩১ তারিখ পর্যন্ত চলবে
-        </marquee>
+       
     </div>
     <div class="table">
         <table border="6">
@@ -126,6 +124,18 @@
                 </tr>
                
             </tbody>
+        </table>
+    </div>
+    <div>
+        <table class="booking">
+            <thead>
+                <tr>
+                    <th>SL</th>
+                    <th>Product Name</th>
+                    <th>Slab</th>
+                    <th>Direct TP</th> 
+                </tr>
+            </thead>
         </table>
     </div>
 </body>
