--- a/gls.html
+++ b/gls.html
@@ -22,11 +22,7 @@
     <div>
         <table border="6">
             <thead>
-                <h1>GLS Bulb
-                <a href="https://drive.google.com/file/d/1Yc8EZolQLKIX6jeZk0-jDvcMxLngz1Rr/view?usp=sharing" target="_blank">
-                        Catalog
-                    </a>
-                </h1>
+                <h1>GLS Bulb</h1>
                 <tr>
                     <th>SL</th>
                     <th>Product Name</th>
