--- a/big.html
+++ b/big.html
@@ -22,12 +22,7 @@
     <div>
         <table border="6">
             <thead>
-                <h1>Big LED
-                <a href="https://drive.google.com/file/d/1Yc8EZolQLKIX6jeZk0-jDvcMxLngz1Rr/view?usp=sharing" target="_blank">
-                        Catalog
-                    </a>
-                </h1>
-                <tr>
+                <h1>Big LED<tr>
                     <th>SL</th>
                     <th>Product Name</th>
                     <th>TP</th>
@@ -39,23 +34,26 @@
                 <tr>
                     <td>01</td>
                     <td>20W Big LED (Pin & Pass)</td>
-                    <td>415.00</td>
-                    <td>340.30</td>
+                    <td>420</td>
+                    <td>298.2</td>
+                    <td>294</td>
                     <td>460.00</td>
                 </tr>
                 <tr>
                     <td>02</td>
                     <td>30W Big LED (Pin & Pass)</td>
-                    <td>504.00</td>
-                    <td>413.28</td>
+                    <td>512</td>
+                    <td>363.52</td>
+                    <td>358.40</td>
                     <td>560.00</td>
                 </tr>
                 <tr>
                     <td>03</td>
                     <td>40W Big LED (Pin & Pass)</td>
-                    <td>693.00</td>
-                    <td>568.26</td>
-                    <td>81000</td>
+                    <td>700</td>
+                    <td>497</td>
+                    <td>490</td>
+                    <td>810</td>
                 </tr>
                
             </tbody>
