--- a/dim.html
+++ b/dim.html
@@ -31,7 +31,8 @@
                     <th>SL</th>
                     <th>Product Name</th>
                     <th>TP</th>
-                    <th>ETP</th>
+                    <th>ETP-12%</th>
+                    <th>ETP-13%</th>
                     <th>MRP</th>
                 </tr>
             </thead>
@@ -40,6 +41,7 @@
                     <td>01</td>
                     <td>0.5W RED</td>
                     <td>51.00</td>
+                    <td>44.88</td>
                     <td>44.37</td>
                     <td>70.00</td>
                 </tr>
@@ -47,6 +49,7 @@
                     <td>02</td>
                     <td>0.5W YELLOW</td>
                     <td>51.00</td>
+                    <td>44.88</td>
                     <td>44.37</td>
                     <td>70.00</td>
                 </tr>
@@ -54,6 +57,7 @@
                     <td>03</td>
                     <td>0.5W BLUE</td>
                     <td>51.00</td>
+                    <td>44.88</td>
                     <td>44.37</td>
                     <td>70.00</td>
                 </tr>
