--- a/big.html
+++ b/big.html
@@ -26,7 +26,8 @@
                     <th>SL</th>
                     <th>Product Name</th>
                     <th>TP</th>
-                    <th>ETP</th>
+                    <th>ETP-29%</th>
+                    <th>ETP-30%</th>
                     <th>MRP</th>
                 </tr>
             </thead>
