--- a/emerg.html
+++ b/emerg.html
@@ -21,16 +21,13 @@
       <div>
         <table border="6">
             <thead>
-                <h1>Emergency LED
-                <a href="https://drive.google.com/file/d/1Yc8EZolQLKIX6jeZk0-jDvcMxLngz1Rr/view?usp=sharing" target="_blank">
-                        Catalog
-                    </a>
-                </h1>
+                <h1>Emergency LED</h1>
                 <tr>
                     <th>SL</th>
                     <th>Product Name</th>
                     <th>TP</th>
-                    <th>ETP</th>
+                    <th>ETP-14%</th>
+                    <th>ETP-15%</th>
                     <th>MRP</th>
                 </tr>
             </thead>
@@ -38,14 +35,16 @@
                 <tr>
                     <td>01</td>
                     <td>06W Emergency</td>
-                    <td>476.50</td>
-                    <td>408.00</td>
+                    <td>480</td>
+                    <td>412.8</td>
+                    <td>408</td>
                     <td>555.00</td>
                 </tr>
                 <tr>
                     <td>02</td>
                     <td>10W Emergency</td>
-                    <td>598.5.0</td>
+                    <td>605</td>
+                    <td>520.30</td>
                     <td>514.25</td>
                     <td>795.00</td>
                 </tr>
