--- a/besic.html
+++ b/besic.html
@@ -28,7 +28,8 @@
                     <th>SL</th>
                     <th>Product Name</th>
                     <th>TP</th>
-                    <th>ETP</th>
+                    <th>ETP-14%</th>
+                    <th>ETP-15%`</th>
                     <th>MRP</th>
                 </tr>
             </thead>
@@ -36,58 +37,66 @@
                 <tr>
                     <td>01</td>
                     <td>03W Besic LED</td>
-                    <td>85</td>
+                    <td>85.00</td>
+                    <td>73.10</td>
                     <td>72.25</td>
                     <td>140</td>
                 </tr>
                 <tr>
                     <td>02</td>
                     <td>05W Besic LED</td>
-                    <td>90</td>
-                    <td>76.50</td>
+                    <td>90.00</td>
+                    <td>77.40</td>
+                    <td>73.10</td>
                     <td>156</td>
                 </tr>
                 <tr>
                     <td>03</td>
                     <td>07W Besic LED</td>
-                    <td>110</td>
+                    <td>110.00</td>
+                    <td>96.00</td>
                     <td>93.50</td>
-                    <td>185</td>
+                    <td>185.00</td>
                 </tr>
                 <tr>
                     <td>04</td>
                     <td>09W Besic LED</td>
-                    <td>130</td>
+                    <td>130.00</td>
+                    <td>111.80</td>
                     <td>110.50</td>
-                    <td>225</td>
+                    <td>225.00</td>
                 </tr>
                 <tr>
                     <td>05</td>
                     <td>12W Besic LED</td>
-                    <td>150</td>
+                    <td>150.00</td>
+                    <td>129.00</td>
                     <td>127.50</td>
-                    <td>265</td>
+                    <td>265.00</td>
                 </tr>
                 <tr>
                     <td>06</td>
                     <td>15W Besic LED</td>
-                    <td>170</td>
+                    <td>170.00</td>
+                    <td>146.20</td>
                     <td>144.50</td>
-                    <td>290</td>
+                    <td>290.00</td>
                 </tr>
                 <tr>
                     <td>07</td>
                     <td>18W Besic LED</td>
-                    <td>190</td>
+                    <td>190.00</td>
+                    <td>163.40</td>
                     <td>161.50</td>
-                    <td>350</td>
+                    <td>350.00</td>
                 </tr>
                 <tr>
                     <td>08</td>
                     <td>20W Besic LED</td>
-                    <td>255</td>
+                    <td>255.00</td>
+                    <td>219.30</td>
                     <td>216.75</td>
-                    <td>370</td>
+                    <td>370.00</td>
                 </tr>
             
             </tbody>
