--- a/bracket.html
+++ b/bracket.html
@@ -22,16 +22,14 @@
     <div>
         <table border="6">
             <thead>
-                <h1>Bracket LED Tube
-                <a href="https://drive.google.com/file/d/1Yc8EZolQLKIX6jeZk0-jDvcMxLngz1Rr/view?usp=sharing" target="_blank">
-                        Catalog
-                    </a>
+                <h1>Bracket LED Tube</a>
                 </h1>
                 <tr>
                     <th>SL</th>
                     <th>Product Name</th>
                     <th>TP</th>
-                    <th>ETP</th>
+                    <th>ETP-1</th>
+                    <th>ETP-2</th>
                     <th>MRP</th>
                 </tr>
             </thead>
@@ -40,6 +38,7 @@
                     <td>01</td>
                     <td>10W Bracket Tube</td>
                     <td>312.00</td>
+                    <td>246.48</td>
                     <td>243.36</td>
                     <td>375.00</td>
                 </tr>
@@ -47,6 +46,7 @@
                     <td>02</td>
                     <td>40W Bracket Tube</td>
                     <td>625.00</td>
+                    <td>493.75</td>
                     <td>487.5</td>
                     <td>775.00</td>
                 </tr>
